fixed shop image to not be blurry

--- a/advertising.css
+++ b/advertising.css
@@ -4,3 +4,10 @@
   width: 30%;
 }
 
+
+
+
+
+.hero-text-header{
+    max-width: 400px;
+  }
